--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3.3'
 services:
-
+  db:
+    image: postgres:14-alpine
+    volumes:
+      - data_value:/var/lib/postgresql/data/
+    env_file:
+      - .env
+  backend:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
+    volumes:
+      - static_value:/app/backend_static/
+      - media_value:/app/backend_media/
+    depends_on:
+      - db
+    env_file:
+      - .env
   frontend:
     build:
       context: ../frontend
@@ -15,3 +32,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/backend_static/
+      - media_value:/var/html/backend_media/
+    depends_on:
+      - backend
+
+volumes:
+  data_value:
+  static_value:
+  media_value:
