--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,35 @@
 server {
     listen 80;
+
+    server_tokens off;
+
+    server_name 127.0.0.1;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /backend_static/ {
+        root /var/html/;
+    }
+
+    location /backend_media/ {
+        root /var/html/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
